--- a/src/modules/header.scss
+++ b/src/modules/header.scss
@@ -10,6 +10,7 @@
 	padding: 2px 10px 22px;
 	border-bottom: 2px solid rgb(248, 248, 249);
 	overflow-x: auto;
+	z-index: 0;
 	a {
 		color: $link;
 		font-size: 15px;
